assets/css/styles.css
/* ... */
.about__perfil {
  position: relative;
  justify-self: center;
  margin-block: 2.5rem 4.5rem;
}

.about__image {
  width: 220px;
}

.about__img {
  position: relative;
  border: 4px solid var(--white-color);
  z-index: 1;
}

.about_shadow,
.about_line,
.about_box {
  position: absolute;
}

.about__shadow {
  width: 150px;
  height: 30px;
  background-color: var(--body-color);
  top: -2.5rem;
  right: -3.5rem;
  border-bottom: 4px solid var(--first-color);
  transition: background-color .4s;
}

.about__perfil .geometric-box {
  top: 1.5rem;
  right: -2.8rem;
}

.about__line {
  filter: invert(1);
  right: -1.25rem;
  top: 6rem;
  width: 50px;
  transition: filter .4s;
}

.about__box {
  width: 40px;
  height: 40px;
  background-color: var(--first-color);
  right: -.5rem;
  bottom: 1.5rem;
}

.about__info {
  padding-left: 1.25rem;
}

.about__description {
  position: relative;
  color: var(--title-color);
  margin-bottom: 1.5rem;
}

.about__description::after {
  content: '';
  width: 20px;
  height: 1px;
  background-color: var(--title-color);
  position: absolute;
  left: -1.75rem;
  top: .5rem;
}

.about__list {
  list-style: square;
  color: var(--title-color);
  margin-bottom: 3rem;
}

.about__buttons {
  display: flex;
  justify-content: center;
  align-items: center;
  column-gap: 1rem;
}

/*=============== SERVICES ===============*/
.services__container {
  grid-template-columns: 250px;
  justify-content: center;
  row-gap: 2rem;
  padding-top: 1rem;
}

.services__card {
  position: relative;
}

.services__content {
  height: 100%;
  background-color: var(--body-color);
  border: 4px solid var(--black-color);
  padding: 6rem 1rem 3rem;
  z-index: 5;
  position: relative;
  transition: background-color .4s, border 4s;
}

.services__border {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 4px solid var(--first-color);
  top: 0;
  left: 0;
  transition: transform .4s;
}

.services__card:hover .services__border {
  transform: translate(.75rem, .75rem);
}

.services__icon {
  position: relative;
  display: inline-block;
}

.services__icon i {
  font-size: 2rem;
  color: var(--black-color);
  position: relative;
  z-index: 5;
}

.services__box {
  position: absolute;
  width: 24px;
  height: 24px;
  background-color: var(--first-color);
  right: -2px;
  top: -2px;
}

.services__title {
  font-size: var(--h2-font-size);
  margin-bottom: 1.25rem;
}

/*=============== PROJECTS ===============*/
.projects {
  background-color: var(--container-color);
    transition: background-color .4s;
}

.projects__container {
  row-gap: 2rem;
}

.projects__card {
  padding: 1rem 1rem 2rem;
  transition: background-color .4s;
}

.projects__image {
  position: relative;
  margin-bottom: .75rem;
}

.projects__button {
  position: absolute;
  right: 1rem;
  bottom: -1.5rem;
  padding: 1rem;
}

.projects__content {
  margin-bottom: 1.25rem;
}

.projects__subtitle {
  position: relative;
  display: inline-block;
  font-size: var(--small-font-size);
  font-weight: var(--font-medium);
  color: var(--text-color);
  margin-bottom: .75rem;
  padding-left: 1.75rem;
}

.projects__subtitle::after {
  content: '';
  width: 20px;
  height: 1px;
  background-color: var(--text-color);
  position: absolute;
  top: 50%;
  left: 0;
}

.projects__title {
  font-size: var(--h3-font-size);
    margin-bottom: .75rem;
}

.projects__buttons {
  display: flex;
  align-items: center;
  column-gap: 1rem;
}

.projects__link {
  display: flex;
  align-items: center;
  column-gap: .25rem;
  color: var(--text-color);
  font-size: var(--small-font-size);
  font-weight: var(--font-medium);
  transition: color .4s;
}

.projects__link i {
  font-size: 1rem;
  color: var(--title-color);
  transition: color .4s;
}

.projects__link:hover,
.projects__link:hover i {
  color: var(--first-color);
}

.projects__card:hover {
  background-color: var(--white-color);
}

/*=============== CONTACT ===============*/
.contact {
  padding-bottom: 0;
}

.contact__container {
  position: relative;
  grid-template-rows: 300px max-content max-content;
  row-gap: 0;
}

.contact__data {
  position: relative;
  width: 300px;
  height: 300px;
  background-color: var(--container-color);
  padding: 3rem 1.5rem 3.5rem;
  margin-left: auto;
  border-bottom: 4px solid var(--first-color);
  z-index: 5;
  transition: background-color .4s;
}

.contact__data .section__title-2 {
  margin: 0 0 1.5rem;
  transform: translateX(-3rem)
}

.contact__desctiption-1 {
  color: var(--title-color);
  font-weight: var(--font-medium);
  margin-bottom: 2rem;
}

.contact__description-2 {
  color: var(--title-color);
  font-size: var(--small-font-size);
}

.contact__data .geometric-box {
  top: 2rem;
  right: 2.5rem;
}

.contact__mail {
  position: relative;
  background-color: var(--black-color);
  padding: 5rem 1.5rem 2.5rem;
  margin-top: -2.5rem;
  transition: background-color .4s;
}

.contact__title {
  color: var(--title-color);
  font-size: var(--h2-font-size);
  margin-bottom: 2rem;
  text-align: center;
}

.contact__form,
.contact__group {
  display: grid;
  row-gap: 1.25rem;
}

.contact__form {
  position: relative;
}

.contact__box {
  position :relative;
  width: 100%;
  height: 58px;
}

.contact__input,
.contact__button {
  font-family: var(--body-font) serif;
  font-size: var(--normal-font-size);
  outline: none;
  border: none;
}

.contact__input {
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: var(--black-color);
  border: 3px solid var(--black-color-light);
  color: var(--white-color);
  padding: .5rem 1rem;
  font-weight: var(--font-medium);
  transition: border .4s, background-color .4s;
}

.contact__input::placeholder {
  color: var(--text-color-light);
  transition: opacity .4s;
}

.contact__input:focus {
  border: 3px solid var(--white-color);
}

.contact__input:-webkit-autofill {
  transition: background-color 6000s, color 6000s;
}
/* ... */

